# plutus-experiments

./: .pre-commit-config.yaml  cabal.project  flake.nix
nix/: github.nix  outputs.nix  project.nix  shell.nix
plutus-experiments/: plutus-experiments.cabal
plutus-experiments/src/: PlutusExperiments.hs
plutus-experiments/src/PlutusExperiments/: Hex.hs
plutus-experiments/test/: Spec.hs
